<resources>
    <string name="app_name">ConnectedClock</string>
    <string name="geofence_unknown_error"> Unknown error: the Geofence service is not available now. </string>
    <string name="geofence_not_available"> Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy. </string>
    <string name="geofence_too_many_geofences"> Your app has registered too many geofences. </string>
    <string name="geofence_too_many_pending_intents"> You have provided too many PendingIntents to the addGeofences() call. </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="group_name">Group Name</string>
    <string name="password">password</string>
    <string name="create_group_button">Create Group</string>
    <string name="setting">Setting</string>
    <string name="status">Statuses</string>
    <string name="add_status">Add Status</string>
    <string name="clock_hand_index">User\'s clock hand index</string>
    <string name="change_password">Change Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_name">Status Name</string>
    <string name="clock_hand_angle">Clock Hand Angle</string>
    <string-array name="user_hand_index">
        <item>index 1</item>
        <item>index 2</item>
        <item>index 3</item>
        <item>index 4</item>
        <item>index 5</item>
    </string-array>
</resources>