<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.group.view.ClockGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="20dp">

        <TextView
            android:labelFor="@+id/groupNameTextView"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/group_name"
            android:textSize="25sp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/groupNameTextView"
            android:layout_width="340dp"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="name of your group"
            android:layout_marginTop="20dp" />

        <TextView
            android:labelFor="@+id/passwordTextView"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordTextView"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:ems="10"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/createGroupButton"
            android:layout_width="340dp"
            android:layout_height="47dp"
            android:text="@string/create_group_button"
            android:layout_marginTop="40dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>